# tic-tac-toe

./: Cargo.toml  README.md  steps.md
src/: board.rs  constants.rs  lib.rs  main.rs  maps.rs  minimax.rs  montecarlo.rs  state.rs
src/maps/: o_transitions.rs  o_wins.rs  reflections.rs  rotations.rs  x_transitions.rs  x_wins.rs
tools/: all_boards.py  all_to_indexed.json  all_to_merged.json  all_to_normalized_pruned.json  all_to_pruned.json  board_indices.json  builder.py  indexed_to_o_transitions.json  indexed_to_o_win.json  indexed_to_reflections.json  indexed_to_rotations.json  indexed_to_x_transitions.json  indexed_to_x_win.json  listified_transitions.json  merged_to_indexed.json  merged_to_o_transitions.json  merged_to_x_transitions.json  normalized.json  normalized_transitions.json  normalized_transitions_merged.json  pruned.json  pruned_to_o_transitions.json  pruned_to_o_wins.json  pruned_to_reflected.json  pruned_to_rotated.json  pruned_to_x_transitions.json  pruned_to_x_wins.json  rust_o_transitions.txt  rust_x_transitions.txt  version2.py
tools/old_json/: all_to_normalized.json
