[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tictactoe"
src = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies]
ahash = "0.8.6"

[dev-dependencies]
rstest = "0.18.2"
